grammar.js
    module: $ => seq(
      optional($.shebangComment),
      optional($.moduleHeader),
      repeat(choice($.importClause, $.importGlobClause)),
      repeat($._moduleMember)
    ),

    moduleHeader: $ => seq(
      optional($.docComment),
      repeat($.annotation),
      choice(
        seq($.moduleClause, optional($.extendsOrAmendsClause)),
        $.extendsOrAmendsClause
      ),
    ),

    extendsOrAmendsClause: $ => seq(
      choice("extends", "amends"),
      $.stringConstant
    ),

    importClause: $ => seq(
      "import",
      $.stringConstant,
      optional(seq("as", $.identifier))
    ),

    _moduleMember: $ => choice(
      $.clazz,
      $.typeAlias,
      $.classProperty,
      $.classMethod
    ),

    classProperty: $ => seq(
      optional($.docComment),
      repeat($.annotation),
      repeat($.modifier),
      $.identifier,
      choice(
        $.typeAnnotation,
        seq(
          optional($.typeAnnotation),
          choice(
            seq("=", $._expr),
            repeat1($.objectBody)
          )
        )
      )
    ),

    objectBody: $ => seq(
      "{",
      optional($.objectBodyParameters),
      repeat($._objectMember),
      "}"
    ),

    _objectMember: $ => prec(PREC.OBJ_MEMBER, choice(
      $.objectProperty,
      $.objectMethod,
      $.objectEntry,
      $.objectElement,
      $.memberPredicate,
      $.forGenerator,
      $.whenGenerator,
      $.objectSpread,
    )),

    objectProperty: $ => seq(
      repeat($.modifier),
      $.identifier,
      choice(
        seq(
          optional($.typeAnnotation),
          "=",
          $._expr
        ),
        repeat1($.objectBody)
      )
    ),

    objectEntry: $ => seq(
      "[",
      field("key", $._expr),
      "]",
      choice(
        seq("=", field("valueExpr", $._expr)),
        repeat1($.objectBody)
      )
    ),

    objectElement: $ => $._expr,

    forGenerator: $ => seq(
      "for",
      "(",
      $._parameter,
      optional(seq(
        ",",
        $._parameter
      )),
      "in",
      $._expr,
      ")",
      $.objectBody
    ),

    _type: $ => choice(
      alias("unknown", $.unknownType),
      alias("nothing", $.nothingType),
      alias("module", $.moduleType),
      alias("this", $.thisType),
      $.stringLiteralType,
      $.declaredType,
      $.parenthesizedType,
      $.nullableType,
      $.constrainedType,
      $.unionType,
      $.defaultUnionType,
      $.functionLiteralType
    ),

    parameterList: $ => seq(
      '(',
      commaSep($._parameter),
      ')'
    ),

    _parameter: $ => choice($.typedIdentifier, $.blankIdentifier),

    typedIdentifier: $ => seq($.identifier, optional($.typeAnnotation)),

    argumentList: $ => seq(
      alias($._open_argument_paren, '('),
      commaSep($._expr),
      ')'
    ),

    modifier: $ => choice(
      "external",
      "abstract",
      "open",
      "local",
      "hidden",
      "fixed",
      "const"
    ),

    _expr: $ => choice(
      $.thisExpr,
      $.outerExpr,
      $.moduleExpr,
      $.nullLiteralExpr,
      $.trueLiteralExpr,
      $.falseLiteralExpr,
      $.intLiteralExpr,
      $.floatLiteralExpr,
      $.throwExpr,
      $.traceExpr,
      $.importExpr,
      $.readExpr,
      $.unqualifiedAccessExpr,
      $.slStringLiteralExpr,
      $.mlStringLiteralExpr,
      $.newExpr,
      $.amendExpr,
      $.superAccessExpr,
      $.superSubscriptExpr,
      $.qualifiedAccessExpr,
      $.subscriptExpr,
      $.nonNullExpr,
      $.unaryMinusExpr,
      $.logicalNotExpr,
      $.exponentiationExpr,
      $.multiplicativeExpr,
      $.additiveExpr,
      $.comparisonExpr,
      $.typeTestExpr,
      $.typeCastExpr,
      $.equalityExpr,
      $.logicalAndExpr,
      $.logicalOrExpr,
      $.pipeExpr,
      $.nullCoalesceExpr,
      $.ifExpr,
      $.letExpr,
      $.functionLiteralExpr,
      $.parenthesizedExpr,
    ),

    parenthesizedExpr: $ => seq("(", $._expr, ")"),

    moduleExpr: $ => "module",

    stringConstant: $ => choice(
      seq(
        '"',
        repeat(choice(
          $.slStringLiteralPart,
          $.escapeSequence
        )),
        '"'
      ),
      seq(
        '#"',
        repeat(choice(
          alias($.slStringLiteralPart1, $.slStringLiteralPart),
          alias($.escapeSequence1, $.escapeSequence),
        )),
        '"#'
      )
    ),

    slStringLiteralPart: $ => $._sl_string_chars,

    newExpr: $ => seq("new", optional($._type), $.objectBody),

    qualifiedIdentifier: $ => seq(
      $.identifier,
      repeat(seq(".", $.identifier)),
    ),

    // TODO: adapt to pkl
    identifier: $ => {
      const alpha = /[^\s0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u00A0]/
      const alpha_numeric = /[^\s:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u00A0]/

      return token(choice(seq(alpha, repeat(alpha_numeric)), /`[^`]*`/))
    },
